add 3rd section

--- a/src/partials/_header.html
+++ b/src/partials/_header.html
@@ -1,6 +1,6 @@
 <header >
     <div class="row pt-3">
-        <div class="logo col-md-6">
+        <div class="logo col-md-6 text-left">
             <img src="../img/Logo.png" alt="logotipus">
         </div>
         <div class="list-group text-uppercase col-md-6 font-weight-bold" id="myList" role="tablist">
