--- a/src/scss/bootstrap/_variables.scss
+++ b/src/scss/bootstrap/_variables.scss
@@ -73,7 +73,7 @@ $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         #ebebeb !default;
-$dark:          #dbdbdb  !default;
+$dark:          #cacaca  !default;
 
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
