--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -1,67 +1,145 @@
-.slider {
+/* Slider */
+
+.slick-slider {
     position: relative;
-    
-    &__arrow {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 75px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
+    display: block;
+    box-sizing: border-box;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -ms-touch-action: pan-y;
+    touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+.slick-list {
+    position: relative;
+    overflow: hidden;
+    display: block;
+    margin: 0;
+    padding: 0;
 
-        @include hover {
-            svg {
-                transform: scale(1.3);
-            }
-        }
-
-        &--left {
-            left: 0;
-            svg {
-                transform: rotate(180deg);
-            }
-            @include hover {
-                svg {
-                    transform: rotate(180deg) scale(1.3);
-                }
-            }
-        }
-
-        &--right {
-            right: 0;
-        }
-
-        svg {
-            fill: $brand-color;
-            @include tr();
-        }
-
+    &:focus {
+        outline: none;
     }
-    &__dots {
-        padding: 30px;
-        margin: 0;
-        text-align: center;
-        li {
-            display: inline-block;
-        }
+
+    &.dragging {
+        cursor: pointer;
+        cursor: hand;
     }
-    &__dot {
-        display: inline-block;
-        width: 14px;
-        height: 14px;
-        border-radius: 50%;
+}
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+    position: relative;
+    left: 0;
+    top: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+    &:before,
+    &:after {
+        content: "";
+        display: table;
+    }
+
+    &:after {
+        clear: both;
+    }
+
+    .slick-loading & {
+        visibility: hidden;
+    }
+}
+.slick-slide {
+    float: left;
+    height: 100%;
+    min-height: 1px;
+    [dir="rtl"] & {
+        float: right;
+    }
+    img {
+        display: block;
+    }
+    &.slick-loading img {
+        display: none;
+    }
+
+    display: none;
+
+    &.dragging img {
+        pointer-events: none;
+    }
+
+    .slick-initialized & {
+        display: block;
+    }
+
+    .slick-loading & {
+        visibility: hidden;
+    }
+
+    .slick-vertical & {
+        display: block;
+        height: auto;
         border: 1px solid transparent;
-        background-color: $brand-color;
+    }
+}
+.slick-arrow.slick-hidden {
+    display: none;
+}
 
-        &--active {
-            border-color: $brand-color;
-            background-color: transparent;
-        }
+.header .slick-dots{
+    position: absolute;
+    display: inline-block;
+    // width: 100px;
+    margin: 0;
+    padding: 0;
+    right: 0%;
+    top: 25%;
+}
+li button{display: none;}
 
-        @include hover {
-            border-color: $brand-color;
-            background-color: transparent;
+header, .news {
+    .slick-dots li{
+        list-style: none;
+        // display: inline-block;
+        width: 5px;
+        height: 5px;
+        padding: 5px 5px;
+        margin: 40px 0;
+        border: 1px solid white;
+        border-radius: 50%;
+        background-color: transparent;
+    }
+    .slick-dots .slick-active{ background-color: #fff;  
+    }
+// .news .slick-dots{
+//    
+// }
+ }
+.news {
+    .slick-dots{
+        position: absolute;
+            display: inline-block;
+            margin: 0;
+            padding: 0;
+            left: calc(50% - 100px);
+            bottom: -120px;
+        & li{
+            display: inline-block;
+            margin: 60px 20px;
         }
     }
+
 }
