--- a/src/partials/_header.html
+++ b/src/partials/_header.html
@@ -1,7 +1,7 @@
 <header >
     <div class="row pt-3">
         <div class="logo col-md-6 text-left">
-            <img src="../img/Logo.png" alt="logotipus">
+            <img src="img/Logo.png" alt="logotipus">
         </div>
         <div class="list-group text-uppercase col-md-6 font-weight-bold" id="myList" role="tablist">
             <a class="list-group-item p-2 text-monospace list-group-item-action text-white active" data-toggle="list" href="#home" role="tab">Home</a>
