--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -111,12 +111,16 @@
 
 .slide{
     display: inline-block;
-    width: 350px;
-    background-color: #fff;
+    width: 350px !important;
+    // background-color: #fff;
+    background-image: linear-gradient(to bottom, transparent 35%, #fff 35%, #fff 100%);
     margin: 20px;
     &-img{
+        width: 240px;
+        height: 240px;
+        display: inline-block;
         border-radius: 50%;
-        border: 5px solid $light;
-        
+        border: 5px solid $light;  
+        margin: 0 auto;      
     }
 }
