--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -109,7 +109,8 @@
     top: 25%;
 }
 
-.slide{
+.team{
+    .slide{
     display: inline-block;
     width: 350px !important;
     // background-color: #fff;
@@ -118,9 +119,9 @@
     &-img{
         width: 240px;
         height: 240px;
-        display: inline-block;
+        // display: inline-block;
         border-radius: 50%;
         border: 5px solid $light;  
         margin: 0 auto;      
     }
-}
+}}
