--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -163,9 +163,17 @@ overflow: hidden;
     overflow: hidden;}
 
 .carousel{
+    display: block;
     width: 720px;
-    max-width: 100%; 
+    height: 320px;
+    padding: 5px;
+    margin: 0 auto;
+    & img{
+        height: 100%;
+        display: inline-block;
+    }
 }
+
 
 .border-radiis{
     border-radius: 50%;}
