fixed: four sections

--- a/src/partials/_header.html
+++ b/src/partials/_header.html
@@ -1,16 +1,28 @@
-<header >
-    <div class="row pt-3">
-        <div class="logo col-md-6 text-left">
-            <img src="img/Logo.png" alt="logotipus">
+<header>
+        <div class="row pt-3">
+            <div class="logo col-md-1 offset-md-1 text-left">
+                <img src="../img/Logo.png" alt="logotipus">
+            </div>
+            <nav class="text-uppercase col-md-9 font-weight-bold" id="myList" role="tablist">
+                <ul class="nav justify-content-end">
+                    <li class="nav-item p-1">
+                        <a class="nav-link p-1 text-monospace text-white active" data-toggle="list" href="#home" role="tab">Home</a>
+                    </li>
+                    <li class="nav-item p-1">
+                        <a class="nav-link p-1 text-monospace text-white" data-toggle="list" href="#About" role="tab">About</a>
+                    </li>
+                        
+                    <li class="nav-item p-1">
+                        <a class="nav-link p-1 text-monospace text-white" data-toggle="list" href="#Services" role="tab">Services</a>
+                    </li>
+                    <li class="nav-item p-1">
+                        <a class="nav-link p-1 text-monospace text-white" data-toggle="list" href="#Works" role="tab">Works</a>
+                    </li>
+                    <li class="nav-item p-1">
+                        <a class="nav-link p-1 text-monospace text-white" data-toggle="list" href="#Contact" role="tab">Contact</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <div class="list-group text-uppercase col-md-6 font-weight-bold" id="myList" role="tablist">
-            <a class="list-group-item p-2 text-monospace list-group-item-action text-white active" data-toggle="list" href="#home" role="tab">Home</a>
-            <a class="list-group-item p-2 text-monospace list-group-item-action text-white" data-toggle="list" href="#About" role="tab">About</a>
-            <a class="list-group-item p-2 text-monospace list-group-item-action text-white" data-toggle="list" href="#Services" role="tab">Services</a>
-            <a class="list-group-item p-2 text-monospace list-group-item-action text-white" data-toggle="list" href="#Works" role="tab">Works</a>
-            <a class="list-group-item p-2 text-monospace list-group-item-action text-white" data-toggle="list" href="#Contact" role="tab">Contact</a>
-        </div>
-        
-    </div>
-
-</header>
+    
+    </header>
