--- a/src/scss/bootstrap/_carousel.scss
+++ b/src/scss/bootstrap/_carousel.scss
@@ -14,6 +14,7 @@
 .carousel {
   position: relative;
   width: 720px;
+  max-width: 96%
 }
 
 .carousel.pointer-event {
@@ -110,13 +111,13 @@
   }
 }
 .carousel-control-prev {
-  left: -20%;
+  left: -10%;
   @if $enable-gradients {
     background-image: linear-gradient(90deg, rgba($black, .25), rgba($black, .001));
   }
 }
 .carousel-control-next {
-  right: -20%;
+  right: -10%;
   @if $enable-gradients {
     background-image: linear-gradient(270deg, rgba($black, .25), rgba($black, .001));
   }
