adaptive forms btn-s and compressed img

--- a/src/partials/_header.html
+++ b/src/partials/_header.html
@@ -1,24 +1,24 @@
 <header>
         <div class="row pt-3">
-            <div class="logo col-md-1 offset-md-1 text-left">
-                <img src="../img/Logo.png" alt="logotipus">
+            <div class="logo col-md-1 offset-md-1 text-center">
+                <img src="img/Logo.png" alt="logotipus">
             </div>
             <nav class="text-uppercase col-md-9 font-weight-bold" id="myList" role="tablist">
-                <ul class="nav justify-content-end">
-                    <li class="nav-item p-1">
+                <ul class="nav justify-content-center">
+                    <li class="nav-item p-sm-0 p-md-1">
                         <a class="nav-link p-1 text-monospace text-white active" data-toggle="list" href="#home" role="tab">Home</a>
                     </li>
-                    <li class="nav-item p-1">
+                    <li class="nav-item p-sm-0 p-md-1">
                         <a class="nav-link p-1 text-monospace text-white" data-toggle="list" href="#About" role="tab">About</a>
                     </li>
                         
-                    <li class="nav-item p-1">
+                    <li class="nav-item p-sm-0 p-md-1">
                         <a class="nav-link p-1 text-monospace text-white" data-toggle="list" href="#Services" role="tab">Services</a>
                     </li>
-                    <li class="nav-item p-1">
+                    <li class="nav-item p-sm-0 p-md-1">
                         <a class="nav-link p-1 text-monospace text-white" data-toggle="list" href="#Works" role="tab">Works</a>
                     </li>
-                    <li class="nav-item p-1">
+                    <li class="nav-item p-sm-0 p-md-1">
                         <a class="nav-link p-1 text-monospace text-white" data-toggle="list" href="#Contact" role="tab">Contact</a>
                     </li>
                 </ul>
