--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,12 +5,23 @@
 
 * {
     box-sizing: border-box;
+
 }
 
 html {
     height: 100%;
     font-size: 20px;
     scroll-behavior: smooth;
+}
+
+.nav{
+    &-item{
+        border-bottom: 2px solid transparent;
+        &:hover{
+            border-color: white;
+            transition: .3s ease-in;
+        }
+    }
 }
 
 .hero{
@@ -21,7 +32,7 @@ html {
     height: 100vh;
     & h1{
         margin-top: 12rem;
-         @media screen and (max-width: 768px) {
+         @media screen and (max-width: 767px) {
             margin-top: 3rem !important;
             font-size: 60px;
         }
@@ -92,8 +103,7 @@ overflow: hidden;
 }
 
 .mapmap{
-    background-image: url(../img/bgi-map.png), linear-gradient($primary);
-    // height: 900px;
+    background-image:  linear-gradient($primary);
     width: 100%;
     overflow: hidden;
     background-size: cover;
@@ -101,6 +111,13 @@ overflow: hidden;
     background-position: center;
     z-index: 0;
     
+    & button{
+        @media screen and (max-width: 991px) {
+            font-size: 0.8rem;
+            padding: 0 1rem;
+        }
+    }
+
     &-info{
         position: relative;
         width: 270px;
@@ -112,8 +129,8 @@ overflow: hidden;
         &:active, &:hover, &:focus{
         transform: translateX(0%);
         transition: .5s ease-in ;
+        }   
         
-        }
         & a:hover{ 
             text-decoration: none;
             color: $primary !important;
@@ -132,17 +149,26 @@ overflow: hidden;
 
     &-arrow{
         bottom: 50px;
+        @media screen and (max-width:768px){
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-45px);
+        }
         left: 80%;
         opacity: .5;
-        transform: scale(.9);
+        transform: scale(.8);
         transition: ease-in .5s;
         &:active, &:hover, &:focus{
             opacity: .6;
             transform: scale(1);
-            transition: ease-in .5s;            
+            transition: ease-in .5s; 
+            @media screen and (max-width:767px) {
+                transform: translateX(-45px) scale(.8);
+
+            }           
         }
-    
     }
+    
     & input{
         background-color: rgba(255,255,255, .5);
         max-width: 48% !important;
@@ -156,7 +182,6 @@ overflow: hidden;
 }
 
 .footer{
-    height: 180px;
     background-color: $primary;
 }
 
