--- a/src/partials/_footer.html
+++ b/src/partials/_footer.html
@@ -1,8 +1,8 @@
 <footer class="footer ">
     <div class="container">
-        <div class="row py-5">
-            <div class="col-md-5 py-3 px-4">©2014 tulusdriyo. All Rights Reserved.</div>
-            <div class="links col-md-5 offset-md-2 py-3 px-4 bg-primary"> 
+        <div class="row py-5 ">
+            <div class=" text-center       col-md-5 py-3 px-4">©2014 tulusdriyo. All Rights Reserved.</div>
+            <div class=" text-center links col-md-5 offset-md-2 py-3 px-4 bg-primary "> 
                 <a href="#" class="link"><i class="border-radiis bg-light fab fa-behance"></i></a>
                 <a href="#" class="link"><i class="border-radiis bg-light fab fa-instagram"></i></a>
                 <a href="#" class="link"><i class="border-radiis bg-light fab fa-google-plus-g"></i></a>
