finish main fixes and disconnect useless JS(BT's)

--- a/src/scss/bootstrap/_bootstrap.scss
+++ b/src/scss/bootstrap/_bootstrap.scss
@@ -14,7 +14,7 @@
 @import "images";
 @import "code";
 @import "grid";
-@import "tables";
+// @import "tables";
 @import "forms";
 @import "buttons";
 @import "transitions";
@@ -23,7 +23,7 @@
 // @import "input-group";
 // @import "custom-forms";
 @import "nav";
-@import "navbar";
+// @import "navbar";
 // @import "card";
 // @import "breadcrumb";
 // @import "pagination";
